  * Build with CTF debug information, and enable KDTRACE_HOOKS (DTrace
    hooks) and DDB_CTF (CTF support in ELF loader) for debug builds.
    (Closes: #689916)
  * Fetch source code securely (https) in get-orig-source.
  * Remove the kludges that modify srcdir in build target. Use override
    variables instead when possible. This will allow sharing the srcdir
    later.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 14:05:10 +0100

kfreebsd-11 (11.0~svn258494-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.
    - Upstream moved aicasm off the kernel build process. Follow them and
      aicasm from freebsd-buildutils (>= 10~svn258496-1~).
    - r258281: Fix siginfo_t.si_status for wait6/waitid/SIGCHLD.
      (Closes: #729698)

  [ Robert Millan ]
  * Remove (disabled) patch 006_mips_i8259_alloc.diff. Problem has been
    fixed in upstream already.
  * Move modules to /boot/modules, as discussed in
    https://lists.debian.org/debian-bsd/2013/09/msg00003.html
  * Disable mipsel builds.  (Closes: #727829)

  [ Guillem Jover ]
  * Remove myself from Uploaders.

 -- Robert Millan <rmh@debian.org>  Sat, 23 Nov 2013 13:24:23 +0100

kfreebsd-11 (11.0~svn256281-1) experimental; urgency=low

  * New upstream snapshot.
    - Rename to kfreebsd-11.
    - Refresh all patches.

  [ Robert Millan ]
  * Only build with Clang on architectures where it is the default in
    upstream.
  * Remove -686-smp transitional packages (not needed for kfreebsd-11).
  * Set __FreeBSD__=1000 for kernel CFLAGS.

 -- Robert Millan <rmh@debian.org>  Thu, 10 Oct 2013 20:02:00 +0200

kfreebsd-10 (10.0~svn255915-1) experimental; urgency=low

  * New upstream snapshot.
    - Includes Xen HVM support.

  [ Robert Millan ]
  * Remove one gratuitous round of src copying.
  * Disable -Werror only for non-Clang compilers.
  * Properly set CLANG_IS_CC knob according to selected compiler.
  * Re-enable -O2.
  * Build kfreebsd-headers-\* only on kfreebsd-@arch@.