@@ -6,8 +6,7 @@ Uploaders: Aurelien Jarno <aurel32@debian.org>, Robert Millan <rmh@debian.org>
 Vcs-Browser: http://anonscm.debian.org/viewvc/glibc-bsd/trunk/kfreebsd-@major@/
 Vcs-Svn: svn://anonscm.debian.org/glibc-bsd/trunk/kfreebsd-@major@/
 Build-Depends: debhelper (>= 5.0.0), bzip2, sharutils, flex-old | flex,
-# for aicasm
- freebsd-buildutils (>= 10~svn258496-1~),
+ freebsd-buildutils (>= 10.0~svn259404-1),
  freebsd-glue (>= 0.1.5),
  byacc,
  @cc_pkg@, libdb-dev,
